<resources>
    <string name="app_name">TheMovieGuru</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="recomendations">Recomendaciones</string>
    <string name="searcher">Buscador</string>
    <string name="user_lists">Mis listas</string>
    <string name="user_fav_actors">Mis actores favoritos</string>
    <string name="movie_recognizer">Reconocedor de pelis</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="action_settings">Preferencias</string>

    <string name="agregar_a_favoritos_text">Agregar a favoritos</string>
    <string name="agregar_a_lista_text">Agregar a Lista</string>
    <string name="mostrar_mas">Mostrar más</string>
    <string name="mostrar_menos">Mostrar menos</string>
    <string name="texto_falopa"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="peliculas">Películas</string>
    <string name="actores">Elenco</string>
    <string name="cache_key_actor">actor_cache_key</string>
    <string name="cache_key_image">image_cache_key</string>
    <string name="cache_key_pelicula">pelicula_cache_key</string>
    <string name="cache_key_reco">reco_cache_key</string>
    <string name="reconocedor_help">Haga click aquí para abrir la cámara</string>
    <string name="escanear_text">Escanear</string>

    <string name="login_text">Iniciar Sesión</string>
    <string name="user_text">Usuario </string>
    <string name="password_text">Contraseña</string>
    <string name="user_hint_text">Ingrese su usuario </string>
    <string name="password_hint_text">Ingrese su contraseña</string>
    <string name="empty_strings">No deje campos sin completar</string>
    <string name="user_not_found">No se encontró usuario con ese nombre y contraseña</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_list_title">Listas</string>


</resources>
