<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recomendations"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/recomendations" />
        <item
            android:id="@+id/nav_searcher"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/searcher" />
        <item
            android:id="@+id/nav_user_lists"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/user_lists" />
        <item
            android:id="@+id/nav_user_fav_actors"
            android:icon="@android:drawable/btn_star"
            android:title="@string/user_fav_actors" />
        <item
            android:id="@+id/nav_movie_recognizer"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/movie_recognizer" />
        <item
            android:id="@+id/nav_close_session"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/close_session" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/login_text" />

    </group>

</menu>
