<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recomendations"
            android:icon="@drawable/icono_recomendados"
            android:title="@string/recomendations" />

        <item
            android:id="@+id/nav_searcher"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/searcher" />

        <item
            android:id="@+id/nav_movie_recognizer"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/movie_recognizer" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/icono_informacion_personal"
            android:title="@string/login_text" />

    </group>

</menu>
