<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.utn.mobile.myapplication.LoginFragment"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:id="@+id/padding_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    <TextView
        android:layout_below="@+id/padding_action_bar"
        android:id="@+id/login_username_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:text="@string/user_text" />

    <EditText
        android:id="@+id/login_username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_username_textview"
        android:inputType="text"
        android:hint="@string/user_hint_text"/>

    <TextView
        android:id="@+id/login_password_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:paddingTop="15dp"
        android:textStyle="bold"
        android:layout_below="@+id/login_username_edittext"/>

    <EditText
        android:id="@+id/login_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_textview"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:hint="@string/password_hint_text"/>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:layout_below="@+id/login_password_edittext"
        />

</RelativeLayout>
