<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollActor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?attr/actionBarSize"
    android:backgroundTint="@color/toolbarIcon"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:visibility="invisible"
    tools:context="com.utn.mobile.myapplication.ActorFragment">

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/actor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="nombre del actor"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/favoritos_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="#00ffffff"
                android:paddingStart="5dp"
                android:src="@drawable/ic_star_border_black_24dp" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/actor_name"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/biografia_actor_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:minHeight="750px"
                android:minWidth="500px"
                android:paddingEnd="5dp"
                android:scaleX="0.9"
                android:scaleY="0.9"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/actor_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/biografia_actor_image"
                android:layout_toEndOf="@+id/biografia_actor_image"
                android:ellipsize="end"
                android:maxLines="16"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:text="@string/texto_falopa" />

            <Button
                android:id="@+id/button_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/actor_bio"
                android:layout_below="@+id/actor_bio"
                android:background="@android:color/transparent"
                android:paddingEnd="10dp"
                android:text="@string/mostrar_mas"
                android:textColor="@color/toolbarPrimary"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_bio_less"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/actor_bio"
                android:layout_below="@+id/actor_bio"
                android:background="@android:color/transparent"
                android:paddingEnd="10dp"
                android:text="@string/mostrar_menos"
                android:textColor="@color/toolbarPrimary"
                android:visibility="gone" />

        </RelativeLayout>


        <TextView
            android:id="@+id/peliculas_actor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/peliculas"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/pelisRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
